# cmake-exercise

./: CMakeLists.txt  Dockerfile  main  main.cpp
